--- a/angular.json
+++ b/angular.json
@@ -23,25 +23,25 @@
               "src/assets"
             ],
             "styles": [
-              // "src/assets/vendors/bootstrap/dist/css/bootstrap.min.css",
-              // "src/assets/vendors/font-awesome/css/font-awesome.min.css",
-              // "src/assets/vendors/nprogress/nprogress.css",
+              "src/assets/vendors/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/vendors/font-awesome/css/font-awesome.min.css",
+              "src/assets/vendors/nprogress/nprogress.css",
 
-              // "./node_modules/alertify/themes/alertify.bootstrap.css",
-              // "./node_modules/alertify/themes/alertify.core.css",
-              // "./node_modules/alertify/themes/alertify.default.css",
-              // "src/assets/css/custom.css",
+              "./node_modules/alertify/themes/alertify.bootstrap.css",
+              "./node_modules/alertify/themes/alertify.core.css",
+              "./node_modules/alertify/themes/alertify.default.css",
+              "src/assets/css/custom.css",
               "./src/styles.css"
 
             ],
             "scripts": [
 
-              // "src/assets/vendors/jquery/dist/jquery.min.js",
-              // "src/assets/vendors/bootstrap/dist/js/bootstrap.min.js",
-              // "src/assets/vendors/fastclick/lib/fastclick.js",
-              // "src/assets/vendors/nprogress/nprogress.js",
-              // "./node_modules/alertify/lib/alertify.js"
-              // // "src/assets/js/custom.js"
+              "src/assets/vendors/jquery/dist/jquery.min.js",
+              "src/assets/vendors/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/vendors/fastclick/lib/fastclick.js",
+              "src/assets/vendors/nprogress/nprogress.js",
+              "./node_modules/alertify/lib/alertify.js",
+              "src/assets/js/custom.js"
             ]
           },
           "configurations": {
