--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "gentelella": "^1.4.0",
+    "moment": "^2.22.2",
     "ng2-daterangepicker": "^2.0.12",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.2.1",
