--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@types/rx": "^4.1.1",
     "alertify": "^0.3.0",
+    "angular-tree-component": "^7.2.1",
     "angular2-dropdown-multiselect": "^1.2.1",
     "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
