--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@types/rx": "^4.1.1",
     "alertify": "^0.3.0",
+    "angular-2-dropdown-multiselect": "^1.8.0",
     "angular-tree-component": "^7.2.1",
     "angular2-dropdown-multiselect": "^1.2.1",
     "animate.css": "^3.6.1",
@@ -33,6 +34,7 @@
     "ng2-daterangepicker": "^2.0.12",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.2.1",
+    "tinymce": "^4.8.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
